src/css/Console.css
.console-container {
    width: 100%;
    height: 70vh;
    display: flex;
    flex-direction: column;
    padding: 0;
    margin: 0;
}

.console-output {
    flex-grow: 1;
    background-color: #0d0d0d;
    color: #dbdfe7;
    font-family: monospace;
    padding: 10px;
    scrollbar-width: thin;
    scrollbar-color: #555 #222;
}

.console-output::-webkit-scrollbar {
    width: 8px;
    height: 8px;
}

.console-output::-webkit-scrollbar-track {
    background: #222;
    border-radius: 5px;
}

.console-output::-webkit-scrollbar-thumb {
    background: #555;
    border-radius: 5px;
}

.console-output::-webkit-scrollbar-thumb:hover {
    background: #777;
}

.console-message {
    white-space: pre-wrap;
}

.console-input {
    display: flex;
    align-items: center;
    width: 100%;
    margin: 10px 0px 10px 0px;
}

.console-input .input {
    flex-grow: 1;
    padding: 10px;
    font-size: 16px;
    outline: none;
    max-width: 100%;
}

.console-input button {
    margin-left: 10px;
    padding: 10px 15px;
}

.console-input button svg {
    font-size: 18px;
}

a {
    color: rgb(88, 166, 255);
    color: -webkit-link;
    cursor: pointer;
    text-decoration: underline;
  }

